// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Include: IDT2 Canonical should render 1`] = `
<div>
  <div
    class="GridItemConstrainedMedium-sc-12lwanc-2 IncludeGrid-sc-1ugtlik-0 sGhsB"
  >
    <div
      class="Include-sc-1ugtlik-1 hOrCaV"
      id="include-1"
    >
      <script
        src="https://news.test.files.bbci.co.uk/include/idt2/static/js/dataPic.64a69df2.js"
        type="text/javascript"
      />
    </div>
  </div>
</div>
`;

exports[`Include: IDT2 Canonical should render fallback when disallowed scripts are present 1`] = `
<div>
  <div
    class="GridItemConstrainedMedium-sc-12lwanc-2 IncludeGrid-sc-1ugtlik-0 sGhsB"
  >
    <img
      alt="An image."
      class="StyledImg-sc-7vx2mr-0 hIxkbt"
      id="include-1"
      src="https://www.bbc.com/ws/includes/idt2/image/816"
      srcset="https://www.bbc.com/ws/includes/idt2/image/470 470w,https://www.bbc.com/ws/includes/idt2/image/816 816w"
    />
  </div>
</div>
`;
